--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ a :visited {
 .header {
     backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.95);
+    filter: sepia(10%);
     padding: 1rem 2rem;
     position: fixed;
     top: 0;
