--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ if .Title }}{{ .Title }} | {{ end }}{{ .Site.Title }}</title>
   <meta name="description" content="{{ with .Site.Params.description }}{{ . }}{{ end }}">
-  <link rel="shortcut icon" href="/favicon.svg">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="shortcut icon" href="./favicon.svg">
+  <link rel="stylesheet" href="./style.css">
   {{ block "head" . }}{{ end }}
 </head>
 <body>
   {{ block "main" . }}{{ end }}
-  <script src="/scripts.js"></script>
+  <script src="./scripts.js"></script>
 </body>
 </html>
