--- a/layouts/index.html
+++ b/layouts/index.html
@@ -47,7 +47,7 @@
 <!-- Section Présentation -->
 <section id="presentation" class="section">
 
-    <div class="parallax-bg" style="background-image: url('/images/fond-2.webp'); top:-1000px"></div>
+    <div class="parallax-bg" style="background-image: url('./images/fond-2.webp'); top:-1000px"></div>
 
     <video autoplay loop muted playsinline class="parallax-bg" style="object-fit:cover; top:-800px">
         <source src="/videos/background-video.mp4" type="video/mp4">
