--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
     <div class="nav-container">
         <a class="logo" href="#accueil" data-section="accueil">
             <div class="logo-img">
-                <img src="/favicon.svg" alt="Logo cabinet Carolina Erni">
+                <img src="./favicon.svg" alt="Logo cabinet Carolina Erni">
             </div>
             <div class="logo-text">
                 <p>Carolina Erni</p>
@@ -48,10 +48,6 @@
 <section id="presentation" class="section">
 
     <div class="parallax-bg" style="background-image: url('./images/fond-2.webp'); top:-1000px"></div>
-
-    <video autoplay loop muted playsinline class="parallax-bg" style="object-fit:cover; top:-800px">
-        <source src="/videos/background-video.mp4" type="video/mp4">
-    </video>
 
     <div class="section-overlay"></div>
     <div class="container dark-box">
