--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Shalimar&display=swap");
+/*
+    hydrotherapie-eaux-vives.ch
+ */
+
+@import url("https://fonts.googleapis.com/css2?family=Shalimar&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 
 :root {
     --color-1: #d4a574;
@@ -16,8 +20,9 @@ p {
 
 body {
     color: #333;
-    font-family: "Arial", sans-serif;
-    line-height: 1.6;
+    font-family: "Source Sans 3", monospace;
+    font-weight: 400;
+    /* line-height: 1.6; */
     overflow-x: hidden;
 }
 
