--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,14 +7,12 @@
 
 <!-- Section Accueil -->
 <section id="accueil" class="section">
-    <div class="container">
-        <div class="dark-box">
-            {{ with .Site.GetPage "02/accueil" }}
-            {{ .Content | safeHTML }}
-            {{ end }}
-        </div>
-        <a href="#presentation" class="cta-button" data-section="presentation">Présentation</a>
+    <div class="container dark-box">
+        {{ with .Site.GetPage "02/accueil" }}
+        {{ .Content | safeHTML }}
+        {{ end }}
     </div>
+    <a href="#presentation" class="cta-button" data-section="presentation">Présentation</a>
 </section>
 
 <!-- Section Présentation -->
@@ -28,7 +26,6 @@
         <source src="https://media.gettyimages.com/id/1655701480/fr/vid%C3%A9o/vague-en-silhouette-se-d%C3%A9tachant-dune-pointe-rocheuse-le-long-de-la-c%C3%B4te-dans-la-lumi%C3%A8re-du.mp4?s=mp4-640x640-gi&k=20&c=fNEOhyt9UUOVazEAe4EfkUA6jNr20Epwf575gwvbCIY=" type="video/mp4">
     </video>
 
-    <div class="section-overlay"></div>
     <div class="container dark-box">
         {{ with .Site.GetPage "03/presentation" }}
         <h2 class="section-title">{{ .Title }}</h2>
