--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,22 @@
     padding: 0;
 }
 
+html {
+    font-size: 100%;
+}
+
+h1 {
+    font-size: clamp(2.0rem, 3vw, 5rem);
+    animation: fadeInUp 1s ease;
+    margin: 0 0rem 1rem;
+    padding: 0;
+}
+
+h2,
+h3 {
+    text-align: center;
+}
+
 p {
     hyphens: auto;
 }
@@ -22,7 +38,6 @@ body {
     color: #333;
     font-family: "Source Sans 3", monospace;
     font-weight: 400;
-    overflow-x: hidden;
 }
 
 [target="_blank"]:not(.header a)::after {
@@ -160,32 +175,18 @@ a[data-section] {
     z-index: -2;
 }
 
-.section-overlay {
-    background: linear-gradient(
-        135deg,
-        rgba(102, 59, 33, 0.9) 0%,
-        rgba(242, 170, 88, 0.1) 100%
-    );
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: -1;
-}
-
 .container {
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1000px;
 }
 
 .dark-box {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     border: 2px solid rgba(107, 59, 33, 0.5);
     margin: 2em 0;
     overflow-wrap: normal;
-    padding: 2em 1em;
+    padding: 2em 2em;
     width: 100%;
 }
 
@@ -227,16 +228,10 @@ a[data-section] {
     background-size: cover;
     color: var(--color-1);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     min-height: 100vh;
     text-align: center;
-}
-
-#accueil h1 {
-    animation: fadeInUp 1s ease;
-    font-size: 4rem;
-    margin-bottom: 1rem;
-    padding: 0 3em;
 }
 
 #accueil p {
@@ -264,7 +259,6 @@ a[data-section] {
 
 /* Présentation content styles */
 #presentation {
-    text-align: center;
     align-items: center;
     background: transparent;
     color: var(--color-1);
@@ -274,10 +268,15 @@ a[data-section] {
     min-height: 100vh;
     padding: 2rem;
     position: relative;
+    text-align: center;
+}
+
+#presentation h2 {
+    margin-top: 1em;
 }
 
 #presentation img {
-    margin-top: 2rem;
+    margin-top: 2em;
     max-width: 100%;
     width: 350px;
     height: 350px;
@@ -290,9 +289,9 @@ a[data-section] {
 
 #presentation blockquote {
     font-family: "Shalimar";
-    font-size: 4rem;
+    font-size: clamp(2.2rem, 3vw, 4rem);
     font-weight: bold;
-    margin: 3em auto 2em;
+    margin: 1.5em auto 2em;
 }
 
 /* Section therapies-massages */
@@ -302,10 +301,6 @@ a[data-section] {
         rgba(102, 59, 33, 1) 0%,
         rgba(242, 170, 88, 1) 100%
     );
-}
-
-#therapies-massages h3 {
-    text-align: center;
 }
 
 /* Services Grid */
@@ -353,7 +348,7 @@ a[data-section] {
 
 .service-card p:not(:first-of-type):not(blockquote p) {
     color: #666;
-    line-height: 1.2;
+    line-height: 1.3;
     text-indent: 1em;
     text-align: left;
     margin: 0.5em 0;
@@ -516,15 +511,6 @@ footer {
         width: 28px;
     }
 
-    #accueil h1 {
-        font-size: 2.5rem;
-        padding: 0;
-    }
-
-    #presentation blockquote {
-        font-size: 2.2rem;
-    }
-
     .section-title {
         font-size: 2rem;
     }
@@ -560,10 +546,6 @@ footer {
     .logo-text p:nth-of-type(1) {
         font-size: 80%;
         margin: 0;
-    }
-
-    #accueil h1 {
-        font-size: 1.6rem;
     }
 
     .service-card p:not(:first-of-type):not(blockquote p) {
