--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ if .Title }}{{ .Title }} | {{ end }}{{ .Site.Title }}</title>
-  <meta name="description" content="{{ with .Site.Params.description }}{{ . }}{{ end }}">
-  <link rel="shortcut icon" href="./favicon.svg">
-  <link rel="stylesheet" href="./style.css">
-  {{ block "head" . }}{{ end }}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ .Site.Title }}</title>
+    <meta name="description" content="{{ with .Site.Params.description }}{{ . }}{{ end }}">
+    <link rel="shortcut icon" href="./favicon.svg">
+    <link rel="stylesheet" href="./style.css">
+    <script type="application/ld+json; charset=utf-8" src="./hydrotherapie-eaux-vives.jsonld"></script>
 </head>
 <body>
-  {{ block "main" . }}{{ end }}
-  <script src="./scripts.js"></script>
+{{ block "main" . }}{{ end }}
+    <script src="./scripts.js"></script>
 </body>
 </html>
