--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,6 +23,9 @@
 <body>
     {{ block "main" . }}{{ end }}
     <script src="./scripts.js"></script>
+{{/*<!--
+    <script src="./helpers.js"></script>
+-->*/}}
 </body>
 
 </html>
