--- a/static/style.css
+++ b/static/style.css
@@ -49,6 +49,10 @@ h3 {
     text-align: center;
 }
 
+h3 a:not(:hover) {
+    text-decoration: none;
+}
+
 p {
     hyphens: auto;
 }
@@ -101,7 +105,7 @@ header {
     background-color: var(--header-cl);
     filter: sepia(10%);
     padding: 1rem 2rem;
-    position: fixed;
+    position: sticky;
     top: 0;
     transition: all 0.3s ease;
     width: 100%;
